--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
         ftp-username: ${{ secrets.FTP_USERNAME }}
         ftp-password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./
-        server-dir: home/mstudio-masashis/www/git-aaa/
+        git-ftp-args: home/mstudio-masashis/www/git-aaa/
